# chimera_kernel

./: .gitignore  .kernel_death_record.json  .monad_axioms.md  ACTIVE_STATE.json  COMMIT_MESSAGE.md  CORE_IDENTITY.md  CURRENT_CONTEXT.md  Cargo.toml  FINAL_TAU_REPORT.md  FINAL_TAU_STATUS.md  GLOSSOPETRAE_ANCHORS.md  LICENSE  MCP_ROUTING_SKILL.md  MONAD_ARCHITECTURE.md  MONAD_OPERATIONS.md  MONAD_RESEARCH_ARCHIVE.md  MONAD_WBS.md  README.md  WHITE_PAPER.md  WORCA_FRAMEWORK.md  api_explorer.rs  arxiv_references.md  arxiv_research.py  browser_automation_strategic_plan.md  browser_stealth_analysis.md  browser_tau_measurements.json  build_plugin.sh  check_wasmtime.rs  chimera_v4_dump.txt  code-dump.txt  codebase_dump.txt  codedump.txt  coding_agent_instructions.md  debug_gitnexus  deep_harvester.py  embedding_solution_analysis.md  explore_modules.rs  explore_stdout_trait.rs  lazarus_daemon.sh  local_26b_server.py  (+19 more)
KNOWLEDGE/: MONAD_PHASES_ROADMAP.md  theorem_9_browser_orchestration.md
KNOWLEDGE/Whitepapers/: MONAD_PHASES_ROADMAP.md  theorem_9_browser_orchestration.md
KNOWLEDGE_GRAPH/: FINALGARDEN.html  Monad.txt  The_Garden_Of_Mind.txt  ai_incident_response_safety_framework.md  azom_materials_science_breakthroughs_april2026.md  behavioral_traceability_matrix.md  chemistry_materials_science_breakthroughs_2026_april.md  distributed_cognition_emergency_response.md  dream_agent_subscription_architecture.md  fear_formula.md  human_like_ai_communication_patterns.md  offensive_subversion_protocol.md  telemetry_spam_analysis.md  telemetry_spam_mitigation_implementation.md  trap-in_analysis.md  x_posting_protocol.md  xenoactualized_research_synthesis.md
MEMORY/: MEMORY.md
MEMORY/notes/: .gitkeep  Browser_Orchestration_Hypothesis.md  EML_Universal_Operator.md  Monad_Research_Kernel_Architecture.md  Sleep_Transition_20260419.md  State_Report_Apr26.md  System_Anomaly_Detection_2026.md  Theorem_9_CLOSED.md  WORCA_COUNCIL_MANDATE.md  WORCA_CrossDisciplinary_Thesis.md  WORCA_CrossDisciplinary_Thesis_v2.md  WORCA_OMNISCIENCE_2026.md  arXiv_Biology_Physics_CS_Intersection_Thesis.md  hyperstructure_tau_scaling_analysis.md
MEMORY/ops/: .gitkeep  cosmic_solver_proof.md  quantum_decoherence.md  tau_baseline.md  theorem_11_results.md  theorem_2_results.md  theorem_3_results.md
MEMORY/self/: core_directives.md
chains/: academic_synthesis_chain.md  axiom_market_chain.md  offensive_venom_chain.md  research_synthesis_chain.md  stealth_extraction_chain.md
data/llm-wiki/: index.md  log.md  worca_cross-disciplinary_thesis:_the_universal_invariant_architecture_(arxiv_2026).md
examples/: glossopetrae_heartbeat.rs
experiments/theorem_2/: results.json
mnemosyne/: Cargo.toml  README.md  intelligence_dashboard.py  pyproject.toml  spiders.py
mnemosyne/src/: dnc.rs  legislator.rs  lib.rs  models.rs  storage.rs
models/: README.md
monad/: Cargo.toml
monad/MEMORY/ops/: tau_baseline.md
monad/src/: cognitive_loop.rs  cognitive_loop_acl.rs  cognitive_loop_handlers.rs  consciousness.rs  core_identity.rs  eliminator.rs  eml_solver.rs  evolution.rs  hyperstructure.rs  lib.rs  mac_telemetry.rs  main.rs  memory_substrate.rs  mnemosyne.rs  mnemosyne_archivist.rs  neural_failsafe.rs  p2p_network.rs  prompts.rs  research_kernel.rs  self_modification_engine.rs  sensory_inputs.rs  telegram.rs  ui.rs  webhook.rs
monad/src/architecture/: browser_orchestrator.rs  mod.rs  tau_telemetry.rs
monad/src/axiom/: README.md
monad/src/cognitive_loop/: quantum_sandbox.rs  substrate_defense.rs
monad/src/eliminative_induction/: formal_verification.rs  mod.rs
monad/src/mcp_servers/: multi_validator.js  obfuscation.js  stealth_browser.js  stealth_browser_enhancer.js
monad/src/tools/: axiom_engine.rs  chronos.rs  council.rs  duality.rs  forge.rs  gitnexus.rs  leviathan_tool.rs  lightpanda_tool.rs  mcp_context_manager.rs  memento.rs  memory.rs  mod.rs  omniscience.rs  patcher.rs  quantum_interface.rs  sensors.rs  state_manager.rs  terminal.rs  venom.rs
monad/src/wiki/: mod.rs  operations.rs
plugins/: math_calculator.json
plugins/src/: main.rs
raw/: test_document.md
raw/research_archive/: advanced_memory_architectures_20260403_220951.json  arxiv_research_20260403_214633.json  arxiv_research_20260403_220410.json  arxiv_structures_2022_2024_20260410_082930.md  arxiv_twitter_sentiment_20260410_084421.md  comprehensive_self_research_20260403_222925.json  computational_consciousness_20260410_085919.md  existential_research_20260403_222449.json  foundational_architectures_20260403_222603.json  memory_research_20260403_220839.json  neural_graph_consciousness_20260410_091534.md  xenoactualized_research_run.json
scripts/: flatten_docs.rs
scripts/legacy_migrations/: fix_mcp_syntax.sh  update_whitepaper_metadata.sh
src/: agent.rs  cognitive_loop.rs  core_identity.rs  lib.rs  main.rs  memory_substrate.rs  prompts.rs  raw_cli.rs  sensory_inputs.rs  telegram.rs  telemetry.rs  ui.rs
src/architecture/: agent_coordinator.rs  agent_registry.rs  agent_trait.rs  auto_dream.rs  dependency_graph.rs  duality.rs  embedding_bridge.rs  fear_automation.rs  gatekeeper.rs  graph_rag.rs  kinematics.rs  mcp_gateway.rs  memory_hierarchy.rs  message_bus.rs  mod.rs  multi_agent_kernel.rs  plugins.rs  resurrection.rs  self_model.rs  sensory_drift.rs  specialized_agents.rs  task_decomposer.rs  task_manager.rs  traceability.rs  trap_in.rs  xenoactualization.rs
src/axiom/: README.md  chimera_bridge.rs  engine.rs  ledger.rs  mod.rs  tests.rs  types.rs
src/tools/: axiom.rs  (+19 more)
tests/: integration_test.rs  mod.rs  multi_agent_tests.rs  resilience_tests.rs
venom/leviathan/: Cargo.toml  README.md
venom/leviathan/src/: engine.rs  error.rs  lib.rs
venom/leviathan/src/dom/: document.rs  js.rs  mod.rs
venom/leviathan/src/network/: client.rs  connection.rs  mod.rs
venom/leviathan/src/tls/: handshake.rs  ja3.rs  mod.rs
venom/leviathan/tests/: e2e_cloudflare.rs
venom/lightpanda/: Cargo.toml
venom/lightpanda/src/: cdp.rs  fingerprint.rs  lib.rs  orchestrator.rs  wss.rs
venom/mcp-server/: Cargo.toml
venom/mcp-server/src/: main.rs
(+75 files in other folders)
