[workspace]
resolver = "2"
members = [
    "monad",
    "mnemosyne",
    "venom/parseltongue",
    "venom/ultralinian",
    "venom/glossopetrae",
    "venom/panopticon",
    "venom/aegis",
    "venom/lightpanda",
    "venom/mcp-server",
    "venom/leviathan"
]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"
futures = "0.3"
