[package]
name = "leviathan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
hyper = { version = "1.2", features = ["full"] }
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"
rustls-pki-types = "1.7"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1.0"
scraper = "0.19"
boa_engine = "0.18"
thiserror = "1.0"
