[package]
name = "lightpanda"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
uuid = { workspace = true }
url = "2.5.0"
