[package]
name = "venom-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
parseltongue = { path = "../parseltongue" }
ultralinian = { path = "../ultralinian" }
glossopetrae = { path = "../glossopetrae" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
